--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,98 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h2 class="text-center">Modifier mes informations personnelles </h2>
+      <div class="mt-5">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="row">
+          <div class="field form-group col-md-6">
+            <%= f.label :name %>*
+            <%= f.text_field :name , autofocus: true, autocomplete: "name", class: "form-control" %>
+          </div>
+
+          <div class="field form-group col-md-6">
+            <%= f.label :firstname %>*
+            <%= f.text_field :firstname, autocomplete: "firstname",  class: "form-control"  %>
+          </div><br />
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :email %>*
+          <%= f.email_field :email, autocomplete: "email",  class: "form-control"  %>
+        </div>
+        <div class="field form-group">
+          <%= f.label :phone_number %>
+          <%= f.text_field :phone_number, autocomplete: "phone_number",  class: "form-control"  %>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>En attente de confirmation pour : <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <h3 class="mt-3 text-center"> Adresse </h3>
+        <div class="mt-3 row">
+
+          <div class="field form-group col-md-3">
+            <%= f.label :street_number %>
+            <%= f.text_field :street_number, autocomplete: "phone_number",  class: "form-control"  %>
+          </div>
+          <div class="field form-group col-md-9">
+          <%= f.label :street %>
+          <%= f.text_field :street, autocomplete: "phone_number",  class: "form-control"  %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="field form-group col-md-3">
+            <%= f.label :zip_code %>
+            <%= f.text_field :zip_code, autocomplete: "phone_number",  class: "form-control"  %>
+          </div>
+          <div class="field form-group col-md-9">
+            <%= f.label :city %>
+            <%= f.text_field :city, autocomplete: "phone_number",  class: "form-control"  %>
+          </div>
+        </div>
+
+        <h3 class="m-3 text-center"> Mot de passe </h3>
+
+        <div class="field  form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+            <em> : <%= @minimum_password_length %> caractères minimum</em>
+          <% end %>
+          <i>(Laissez vide si vous ne voulez pas le changer)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password",  class: "form-control"  %>
+        </div>
+
+        <div class="field  form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
+        </div>
+
+        <div class="field  form-group">
+          <%= f.label :current_password %> <i>(Mot de passe actuel nécessaire pour valider les changements)</i><br />
+          <%= f.password_field :current_password, autocomplete: "current-password",  class: "form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit t("helpers.submit.update"), class: "btn btn-outline-primary btn-block" %>
+        </div>
+      <% end %>
+      <hr class="m-5">
+      <h4 class="m-3 text-center">Supprimer mon compte</h4>
+
+      <%= button_to "Supprimer mon compte",
+       registration_path(resource_name),
+       data: { confirm: "Êtes vous sur de vouloir supprimer votre compte?" },
+       method: :delete,
+       class: "btn btn-outline-danger btn-block" 
+      %>
+
+      <%= link_to "Retour à la page précédente", :back %>
+
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(Laissez vide si vous ne voulez pas le changer)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
