--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/navbar" %>
+    <main class="mt-5 pt-5">
+
+      
+
+      <%= yield %>
+
+
+    </main>
   </body>
 </html>
