[add] address method

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,8 @@
         <%= @user.phone_number %><br>
         <%= @user.street_number %> <%= @user.street %><br>
         <%= @user.zip_code %> <%= @user.city %><br>
-        <%= @user.encrypted_password %>
+        <%= @user.address %>
+
       </div>
     </div>
   </div>
