--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
           Profil
         </a>
         <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuLink">
-          <%= link_to "Mon Profil", edit_user_registration_path, class: "dropdown-item" %>
+          <%= link_to "Mon Profil", user_path(id: current_user.id), class: "dropdown-item" %>
           <hr class="mr-3 ml-3">
           <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger ml-3 mr-2" %>
         </div>
