--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,34 @@
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <h2 class="text-center">Mes informations personnelles</h2>
-      <div class="mt-5">
-        <%= @user.name.upcase %>
-        <%= @user.firstname.capitalize %><br>
-        <%= @user.email %><br>
-        <%= @user.phone_number %><br>
-        <%= @user.street_number %> <%= @user.street %><br>
-        <%= @user.zip_code %> <%= @user.city %><br>
-        <%= @user.address %>
-
-      </div>
+  <div class="col-md-8 offset-md-2">
+    <h2 class="text-center">Mes informations personnelles</h2>
+    <div class="mt-5 d-flex justify-content-center">
+      <table class="col-md-8 table-striped table-hover">
+        <tr>
+          <td class="col-md-6">Nom : </td>
+          <td><%= @user.name.upcase%></td>
+        </tr>
+        <tr>
+          <td class="col-md-6">Prénom : </td>
+          <td><%= @user.firstname.capitalize %></td>
+        </tr>
+        <tr>
+          <td class="col-md-6"> Numéro de téléphone : </td>
+          <td><%= @user.phone_number%></td>
+        </tr>
+        <tr>
+          <td class="col-md-6"> Adresse mail : </td>
+          <td><%= @user.email%></td>
+        </tr>
+        <tr>
+          <td class="col-md-6"> Adresse postale : </td>
+          <td><%= render "users/address", user: @user %></td>
+        </tr>
+      </table>
     </div>
+    <%= button_to "Modifier mes informations",
+    edit_user_registration_path,
+    method: :get,
+    class: "btn btn-outline-primary btn-block mt-3"
+    %>
   </div>
 </div>
