[add] flash message alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,8 @@
   <body>
     <%= render "layouts/navbar" %>
     <main class="mt-5 pt-5">
-
-      
-
+      <%= render "layouts/flash_message" %>
       <%= yield %>
-
-
     </main>
   </body>
 </html>
