--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
 <p>Bonjour <%= @resource.firstname.capitalize%> <%= @resource.name.upcase.upcase %>!</p>
 
-<p>Nous vous contactons pour vous informer que votre mot de passe est modifiée</p>
+<p>Nous vous contactons pour vous informer que votre mot de passe est modifié</p>
