--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
-  <%= link_to "PCAET", root_path, class: "navbar-brand" %>
+  <%= link_to "Mon site", root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
