--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,10 +10,14 @@
 
     <div class="navbar-nav dropdown ml-auto">
       <% if user_signed_in? %>
+
         <a class="btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Profil
         </a>
         <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuLink">
+          <% if current_user.admin %>
+            <%= link_to "Nouvelle formation", new_formation_type_path, class: "dropdown-item" %>
+          <% end %>
           <%= link_to "Mon Profil", user_path(id: current_user.id), class: "dropdown-item" %>
           <hr class="mr-3 ml-3">
           <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger ml-3 mr-2" %>
