--- a/app/views/formation_types/index.html.erb
+++ b/app/views/formation_types/index.html.erb
@@ -1,2 +1,29 @@
-<h1>FormationTypes#index</h1>
-<p>Find me in app/views/formation_types/index.html.erb</p>
+<div class="container mt-5">
+  <div class="col-md-12 ">
+    <h2 class="text-center">Liste de type de formation</h2>
+    <div class="mt-5 d-flex justify-content-center">
+      <table class="table table-striped table-hover ">
+        <thead>
+          <tr>
+            <th scope="col"> Nom </th>
+            <th scope="col"> Nombre de place </th>
+          </tr>
+        </thead>
+        <tbody>
+
+        <% @formation_types.each do |formation| %>
+          <tr data-link="<%= formation_type_path(id: formation.id) %>">
+            <td><%= formation.name%></td>
+            <td><%= formation.place_number %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+    <%= link_to "Ajouter un nouveau type de formation",
+        new_formation_type_path,
+        method: :get,
+        class: "btn btn-outline-primary btn-block mt-5"
+    %>
+  </div>
+</div>
