--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuLink">
           <% if current_user.admin %>
-            <%= link_to "Nouvelle formation", new_formation_type_path, class: "dropdown-item" %>
+            <%= link_to "Liste des types de formation", formation_types_path, class: "dropdown-item" %>
           <% end %>
           <%= link_to "Mon Profil", user_path(id: current_user.id), class: "dropdown-item" %>
           <hr class="mr-3 ml-3">
