[update] message to delete formation type

--- a/app/views/formation_types/edit.html.erb
+++ b/app/views/formation_types/edit.html.erb
@@ -23,9 +23,9 @@
         </div>
       <% end %>
       <hr class="m-5">
-      <h4 class="m-3 text-center">Supprimer mon compte</h4>
+      <h4 class="m-3 text-center">Supprimer le type de formation</h4>
 
-      <%= button_to "Supprimer mon compte",
+      <%= button_to "Supprimer",
        @formation_type,
        data: { confirm: "Êtes vous sur de vouloir supprimer ce type de formation?" },
        method: :delete,
